// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleAnalytics doesn't add anything if there's no tracking ids 1`] = `""`;

exports[`GoogleAnalytics works with a single tracking id 1`] = `
"<script data-rh=\\"true\\" >
(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
ga('create', 'UA-XXXXXXX-X', 'auto', 'tracker_UA_XXXXXXX_X');</script>"
`;

exports[`GoogleAnalytics works with multiple traking ids 1`] = `
"<script data-rh=\\"true\\" >
(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
ga('create', 'UA-XXXXXXX-X', 'auto', 'tracker_UA_XXXXXXX_X');
ga('create', 'UA-YYYYYYY-Y', 'auto', 'tracker_UA_YYYYYYY_Y');</script>"
`;
